--- a/aula2/Aula_02_03.ipynb
+++ b/aula2/Aula_02_03.ipynb
@@ -4364,7 +4364,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit (system)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -4392,7 +4392,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "c47014ab284fd086d6d53f40781f7f5233cea999c086f5b806fc83892fe08769"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
